--- a/HaSharedLirary/HaSharedLirary.csproj
+++ b/HaSharedLirary/HaSharedLirary.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>SoundPlayer.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\BitmapHelper.cs" />
     <Compile Include="Util\ScreenDPIUtil.cs" />
     <Compile Include="WzMp3Streamer.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
