[HaCreator] Flip property for life object editor

--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -687,9 +687,9 @@
       <Project>{0b7155ef-1eb0-4fae-ba56-8064cbaf2bea}</Project>
       <Name>Harepacker-resurrected</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HaSharedLirary\HaSharedLirary.csproj">
+    <ProjectReference Include="..\HaSharedLirary\HaSharedLibrary.csproj">
       <Project>{5411388B-F3CB-4D52-9F55-ABD15CFE966C}</Project>
-      <Name>HaSharedLirary</Name>
+      <Name>HaSharedLibrary</Name>
     </ProjectReference>
     <ProjectReference Include="..\MapleLib\MapleLib.csproj">
       <Project>{28AAB36D-942E-4476-A000-0E9DE380F390}</Project>
