--- a/HaSharedLirary/HaSharedLibrary.csproj
+++ b/HaSharedLirary/HaSharedLibrary.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5411388B-F3CB-4D52-9F55-ABD15CFE966C}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>HaSharedLirary</RootNamespace>
-    <AssemblyName>HaSharedLirary</AssemblyName>
+    <RootNamespace>HaSharedLibrary</RootNamespace>
+    <AssemblyName>HaSharedLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
