spine animation rendering
Simply click on any ".atlas" WzObject in HaRepacker, and a new window will appear.

Map001.wz/bg/morass.img
Map001.wz/bg/arcana1.img
Map001.wz/bg/arcana2.img
Map001.wz/bg/Lach_boss.img
Map001.wz/bg/Lacheln.img
Map001.wz/bg/Lach_back.img
Map001.wz/bg/urus.img
Map001.wz/bg/kinesis_city.img
Map001.wz/bg/horizon.img
Map001.wz/bg/HofM3.img
Map001.wz/bg/HofM3_city.img
Map001.wz/bg/HofM4.img
Map001.wz/bg/extinction.img
Map001.wz/bg/downtown.img
Map001.wz/bg/Cernium3.img
Map001.wz/bg/BossDemian.img
Map001.wz/bg/BM3_4_bossBlackMage.img
Map001.wz/bg/BM3_3.img
Map001.wz/bg/BM1_3.img

Mob001.wz/8881000.img

Known issues:
-Fix map outlink property pointing to other Map.wz "Map001.wz/bg/Lacheln.img/spine/0 (Map/Back/extinction.img/spine/0/destroycave2.png)

--- a/HaSharedLirary/HaSharedLibrary.csproj
+++ b/HaSharedLirary/HaSharedLibrary.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\Compiled\Debug\AnyCPU\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -24,7 +24,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Compiled\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -99,6 +99,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="XnaDefaultFont.xnb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
