--- a/HaSharedLirary/HaSharedLibrary.csproj
+++ b/HaSharedLirary/HaSharedLibrary.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -64,7 +65,9 @@
     <Compile Include="GUI\SoundPlayer.xaml.cs">
       <DependentUpon>SoundPlayer.xaml</DependentUpon>
     </Compile>
+    <Compile Include="kernel32.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="user32.cs" />
     <Compile Include="Util\BitmapHelper.cs" />
     <Compile Include="Util\ScreenDPIUtil.cs" />
     <Compile Include="WzMp3Streamer.cs" />
@@ -98,6 +101,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="XnaDefaultFont.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
