[HaCreator] Rendering spine object & backgrounds on map simulator.
to test:
450005400
940200218
970072000

450012440
Limina/ Limen - End of the world

Moonbridge -
last horizon, etc

Tenebris : Ladyrinth of suffering

450001250
Cave of Rest : Spray Waterfall

there are still issues with render position.

--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -381,6 +381,8 @@
     <Compile Include="MapEditor\UndoRedo\UndoRedoBatch.cs" />
     <Compile Include="MapEditor\UserObjectsManager.cs" />
     <Compile Include="MapSimulator\DX\BackgroundItem.cs" />
+    <Compile Include="MapSimulator\DX\IDXObject.cs" />
+    <Compile Include="MapSimulator\DX\DXSpineObject.cs" />
     <Compile Include="MapSimulator\DX\MapItem.cs" />
     <Compile Include="MapSimulator\MapSimulator.cs" />
     <Compile Include="MapSimulator\MapSimulatorLoader.cs" />
