--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -381,11 +381,12 @@
     <Compile Include="MapEditor\UndoRedo\UndoRedoAction.cs" />
     <Compile Include="MapEditor\UndoRedo\UndoRedoBatch.cs" />
     <Compile Include="MapEditor\UserObjectsManager.cs" />
-    <Compile Include="MapSimulator\DX\BackgroundItem.cs" />
+    <Compile Include="MapSimulator\Objects\BackgroundItem.cs" />
     <Compile Include="MapSimulator\DX\IDXObject.cs" />
     <Compile Include="MapSimulator\DX\DXSpineObject.cs" />
-    <Compile Include="MapSimulator\DX\MapItem.cs" />
-    <Compile Include="MapSimulator\DX\NpcItem.cs" />
+    <Compile Include="MapSimulator\Objects\MapItem.cs" />
+    <Compile Include="MapSimulator\Objects\MobItem.cs" />
+    <Compile Include="MapSimulator\Objects\NpcItem.cs" />
     <Compile Include="MapSimulator\MapSimulator.cs" />
     <Compile Include="MapSimulator\MapSimulatorLoader.cs" />
     <Compile Include="MapSimulator\MapRenderResolution.cs" />
