[HaCreator] Render Reactor + Fix for linked wzImage renders (portals, mobs)

--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -393,6 +393,7 @@
     <Compile Include="MapSimulator\MapRenderResolution.cs" />
     <Compile Include="GUI\TabItemContainer.cs" />
     <Compile Include="MapSimulator\Objects\PortalItem.cs" />
+    <Compile Include="MapSimulator\Objects\ReactorItem.cs" />
     <Compile Include="ThirdParty\ColorDialog.xaml.cs">
       <DependentUpon>ColorDialog.xaml</DependentUpon>
     </Compile>
