[HaCreator] FPS test indicator + cap fps to vsync

--- a/HaSharedLirary/HaSharedLibrary.csproj
+++ b/HaSharedLirary/HaSharedLibrary.csproj
@@ -140,6 +140,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="XnaFont_Debug.xnb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="XnaDefaultFont.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
