--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -397,6 +397,7 @@
     <Compile Include="MapSimulator\Objects\FieldObject\PortalItem.cs" />
     <Compile Include="MapSimulator\Objects\FieldObject\ReactorItem.cs" />
     <Compile Include="MapSimulator\TexturePool.cs" />
+    <Compile Include="MapSimulator\UIFrameHelper.cs" />
     <Compile Include="ThirdParty\ColorDialog.xaml.cs">
       <DependentUpon>ColorDialog.xaml</DependentUpon>
     </Compile>
