--- a/HaSharedLirary/HaSharedLibrary.csproj
+++ b/HaSharedLirary/HaSharedLibrary.csproj
@@ -8,11 +8,12 @@
     <OutputType>Library</OutputType>
     <RootNamespace>HaSharedLibrary</RootNamespace>
     <AssemblyName>HaSharedLibrary</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
